--- a/vars/main.yml
+++ b/vars/main.yml
@@ -8,6 +8,8 @@ NameNode_Port: 9000
 NameNode_IP: "{{  groups['MasterNode'][0]  }}"
 NameNode_Dir: "/NameNode"
 Replication_Factor: 1
+DataNode_IP:
+  - 192.168.99.111
 NameNodePorts:
   - 50070
   - 50470
