Used Command instead of Shell!

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,4 +1,4 @@
 ---
 # handlers file for Hadoop
 - name: Run BashRC
-  shell: "source {{  ansible_env.HOME  }}/.bashrc"
+  command: "source {{  ansible_env.HOME  }}/.bashrc"
