--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -36,7 +36,7 @@
 - name: Adding MasterNode HostNames in the /etc/hosts file!
   lineinfile:
     path: /etc/hosts
-    line: "{{NameNode_IP}} Master"
+    line: "{{  NameNode_IP  }} Master"
     state: present
 
 - name: Adding DataNode HostNames in the /etc/hosts file!
@@ -233,7 +233,7 @@
 - name: Editing the Slaves file!
   lineinfile:
     path: "{{ hadoop_dir }}/hadoop-2.10.1/etc/hadoop/slaves"
-    line: "DataNode{{ index + 1}}"
+    line: "DataNode{{ . index + 1  }}"
     state: present
     create: yes
   loop: "{{ DataNode_IP }}"
