--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -104,15 +104,15 @@
   blockinfile:
     path: ~/.bashrc
     block: |
-      HADOOP_HOME=/etc/hadoop/hadoop-2.10.1
-      HADOOP_INSTALL=$HADOOP_HOME
-      HADOOP_MAPRED_HOME=$HADOOP_HOME
-      HADOOP_COMMON_HOME=$HADOOP_HOME
-      HADOOP_HDFS_HOME=$HADOOP_HOME
-      YARN_HOME=$HADOOP_HOME
-      HADOOP_COMMON_LIB_NATIVE_DIR=$HADOOP_HOME/lib/native
-      PATH=$PATH:$HADOOP_HOME/sbin:$HADOOP_HOME/bin
-      HADOOP_OPTS="-Djava.library.path=$HADOOP_HOME/lib/native"
+      export HADOOP_HOME=/etc/hadoop/hadoop-2.10.1
+      export HADOOP_INSTALL=$HADOOP_HOME
+      export HADOOP_MAPRED_HOME=$HADOOP_HOME
+      export HADOOP_COMMON_HOME=$HADOOP_HOME
+      export HADOOP_HDFS_HOME=$HADOOP_HOME
+      export YARN_HOME=$HADOOP_HOME
+      export HADOOP_COMMON_LIB_NATIVE_DIR=$HADOOP_HOME/lib/native
+      export PATH=$PATH:$HADOOP_HOME/sbin:$HADOOP_HOME/bin
+      export HADOOP_OPTS="-Djava.library.path=$HADOOP_HOME/lib/native"
   notify: Run BashRC
 
 - name: Calling the Handlers
